# Self-media-Viral-Assistant-Jizhile

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md
.github/: RELEASE_NOTES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: desktop-ci.yml  release.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLES.md  PLUGIN_GUIDE.md  PROJECT-SPEC.md  README.zh-CN.md
docs/zh-CN/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLES.md  PLUGIN_GUIDE.md  PROJECT-SPEC.md
include/: api_catalog.h  app_controller.h  article.h  collection_task.h  config_manager.h  content_data_client.h  database_manager.h  export_service.h  jizhilia_client.h  plugin_interfaces.h
packaging/: com.mediahit.Assistant.desktop  com.mediahit.Assistant.metainfo.xml
plugins/: README.md
resources/: qml.qrc
scripts/: audit_brand_privacy.py  audit_devprompt_alignment.py  audit_page_screenshots.py  audit_polished_ux.py  audit_qml_controls.py  audit_release_workflow.py  audit_ui_help_tooltips.py  package-linux.sh  package-windows.ps1  verify-all.sh
src/: api_catalog.cpp  app_controller.cpp  config_manager.cpp  content_data_client.cpp  database_manager.cpp  export_service.cpp  jizhilia_client.cpp  main.cpp  plugin_interfaces.cpp
tests/: live_probe.cpp  test_core.cpp
ui/: Main.qml
